--- a/index.html
+++ b/index.html
@@ -8,17 +8,21 @@
   </head>
   <body>
     <header class="header">
-      <h1 class="header__logo">Sugar Shack Donuts</h1>
+      <h1 class="header__logo">Sugar <span class="shack">Shack</span> Donuts</h1>
       <nav class="header__nav">
         <ul class="nav__list">
           <li class="nav__item"><a href="#learn-more" class="nav__link">Learn More</a></li>
           <li class="nav__item"><a href="#store" class="nav__link">Store</a></li>
           <li class="nav__item"><a href="#about-us" class="nav__link">About Us</a></li>
+          <li class="nav__item"><a href="#cart" class="nav__link"><i class="fa fa-shopping-cart"></i></a></li>
+          <li class="nav__item"><a href="#profile" class="nav__link"><i class="fa fa-user"></i></a></li>
         </ul>
       </nav>
     </header>
 
     <main class="main"></main>
 
+    <script src="https://kit.fontawesome.com/0ae3828fd1.js" crossorigin="anonymous"></script>
+    <script src="app.js"></script>
   </body>
 </html>
