--- a/index.html
+++ b/index.html
@@ -20,7 +20,18 @@
       </nav>
     </header>
 
-    <main class="main"></main>
+    <main class="main">
+
+        <section class="home">
+            <div class="home__container">
+                <h1 class="home__title">Indulge in Sweet Moments <br> One Donut at a Time.</h1>
+                <p class="home__description">Our donuts are crafted with passion and perfection, each bite telling a tale of indulgence and delight. </p>
+            </div>
+
+            <button class="home__button">Shop Now</button>
+            <button class="home__button">Learn More</button>
+        </section>
+    </main>
 
     <script src="https://kit.fontawesome.com/0ae3828fd1.js" crossorigin="anonymous"></script>
     <script src="app.js"></script>
