--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
         <section class="home">
             <div class="home__container">
                 <h1 class="home__title">Indulge in Sweet Moments <br> One Donut at a Time.</h1>
-                <p class="home__description">Our donuts are crafted with passion and perfection, each bite telling a tale of indulgence and delight. </p>
+                <p class="home__description">Our donuts are crafted with passion and perfection,<br> each bite telling a tale of indulgence and delight. </p>
             </div>
 
-            <button class="home__button">Shop Now</button>
-            <button class="home__button">Learn More</button>
+            <button class="home__button primary">Shop Now</button>
+            <button class="home__button secondary">Learn More</button>
         </section>
     </main>
 
