--- a/index.html
+++ b/index.html
@@ -8,32 +8,58 @@
   </head>
   <body>
     <header class="header">
-      <h1 class="header__logo">Sugar <span class="shack">Shack</span> Donuts</h1>
+      <h1 class="header__logo">
+        Sugar <span class="shack">Shack</span> Donuts
+      </h1>
       <nav class="header__nav">
         <ul class="nav__list">
-          <li class="nav__item"><a href="#learn-more" class="nav__link">Learn More</a></li>
-          <li class="nav__item"><a href="#store" class="nav__link">Store</a></li>
-          <li class="nav__item"><a href="#about-us" class="nav__link">About Us</a></li>
-          <li class="nav__item"><a href="#cart" class="nav__link"><i class="fa fa-shopping-cart"></i></a></li>
-          <li class="nav__item"><a href="#profile" class="nav__link"><i class="fa fa-user"></i></a></li>
+          <li class="nav__item">
+            <a href="#learn-more" class="nav__link">Learn More</a>
+          </li>
+          <li class="nav__item">
+            <a href="#store" class="nav__link">Store</a>
+          </li>
+          <li class="nav__item">
+            <a href="#about-us" class="nav__link">About Us</a>
+          </li>
+          <li class="nav__item">
+            <a href="#cart" class="nav__link"
+              ><i class="fa fa-shopping-cart"></i
+            ></a>
+          </li>
+          <li class="nav__item">
+            <a href="#profile" class="nav__link"><i class="fa fa-user"></i></a>
+          </li>
         </ul>
       </nav>
     </header>
 
     <main class="main">
-
-        <section class="home">
-            <div class="home__container">
-                <h1 class="home__title">Indulge in Sweet Moments <br> One Donut at a Time.</h1>
-                <p class="home__description">Our donuts are crafted with passion and perfection,<br> each bite telling a tale of indulgence and delight. </p>
-            </div>
-
-            <button class="home__button primary">Shop Now</button>
-            <button class="home__button secondary">Learn More</button>
-        </section>
+      <section class="home">
+        <div class="home__container">
+          <div class="home__text">
+            <h1 class="home__title">
+              Indulge in Sweet Moments <br />
+              One Donut at a Time.
+            </h1>
+            <p class="home__description">
+              Our donuts are crafted with passion and perfection,<br />
+              each bite telling a tale of indulgence and delight.
+            </p>
+          </div>
+          <div class="home__image">
+            <img src="images/floatingdonuts.png" alt="Donuts" />
+          </div>
+        </div>
+        <button class="home__button primary">Shop Now</button>
+        <button class="home__button secondary">Learn More</button>
+      </section>
     </main>
 
-    <script src="https://kit.fontawesome.com/0ae3828fd1.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/0ae3828fd1.js"
+      crossorigin="anonymous"
+    ></script>
     <script src="app.js"></script>
   </body>
 </html>
