Change position of images

--- a/index.html
+++ b/index.html
@@ -47,8 +47,14 @@
               each bite telling a tale of indulgence and delight.
             </p>
           </div>
-          <div class="home__image">
-            <img src="images/floatingdonuts.png" alt="Donuts" />
+
+          <div class="home__images">
+            <img class="home__blob" src="images/blob.png" alt="Blob Image" />
+            <img
+              class="home__donut"
+              src="images/floatingdonuts.png"
+              alt="Donut Image"
+            />
           </div>
         </div>
         <button class="home__button primary">Shop Now</button>
