Change styling and layout

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <img class="home__blob" src="images/blob.png" alt="Blob Image" />
             <img
               class="home__donut"
-              src="images/floatingdonuts.png"
+              src="images/floating-donuts.png"
               alt="Donut Image"
             />
           </div>
