--- a/index.html
+++ b/index.html
@@ -60,6 +60,28 @@
         <button class="home__button primary">Shop Now</button>
         <button class="home__button secondary">Learn More</button>
       </section>
+
+      <section class="about">
+        <div class="about__container">
+          <div class="about__image">
+            <img src="images/donut.png" alt="" />
+          </div>
+          <div class="about__content">
+            <p class="about__subtitle">About Us</p>
+            <h1 class="about__title">We make the best donuts in town</h1>
+            <p class="about__description">
+              At Sugar Shack Donuts, we're passionate about crafting the most
+              delicious and indulgent donuts in town. Our journey began with a
+              simple desire: to spread joy through our delightful treats. Each
+              donut we make is a labor of love, carefully crafted using the
+              finest ingredients and time-honored recipes. We believe in the
+              power of a good donut to brighten your day and create sweet
+              memories. Join us on our delicious adventure and indulge in the
+              magic of Sugar Shack Donuts!
+            </p>
+          </div>
+        </div>
+      </section>
     </main>
 
     <script
