Add storefinder section

--- a/index.html
+++ b/index.html
@@ -134,7 +134,25 @@
       </section>
 
       <section class="map">
-        <div class="map__container"></div>
+        <div class="map__container">
+          <iframe
+            class="map__frame"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d155421.70603792695!2d13.25992711787948!3d52.50693861615697!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47a84e373f035901%3A0x42120465b5e3b70!2sBerlin!5e0!3m2!1sde!2sde!4v1707580149646!5m2!1sde!2sde"
+            width="600"
+            height="450"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          ></iframe>
+          <div class="map__content">
+            <h1 class="map__title">Store Finder</h1>
+            <p class="map__description">
+              Find out where your nearest store is!
+              Over 40 locations across Germany!
+            </p>
+          </div>
+        </div>
       </section>
 
       <footer>
