--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
       <nav class="header__nav">
         <ul class="nav__list">
           <li class="nav__item">
-            <a href="#learn-more" class="nav__link">Learn More</a>
+            <a href="#about" class="nav__link">About Us</a>
           </li>
           <li class="nav__item">
-            <a href="#store" class="nav__link">Store</a>
+            <a href="#menu" class="nav__link">Menu</a>
           </li>
           <li class="nav__item">
-            <a href="#about-us" class="nav__link">About Us</a>
+            <a href="#storefinder" class="nav__link">Storefinder</a>
           </li>
           <li class="nav__item">
             <a href="#cart" class="nav__link"
@@ -61,7 +61,7 @@
         <button class="home__button secondary">Learn More</button>
       </section>
 
-      <section class="about">
+      <section class="about" id="about">
         <div class="about__container">
           <div class="about__image">
             <img src="images/donut.png" alt="" />
@@ -83,7 +83,7 @@
         </div>
       </section>
 
-      <section class="menu">
+      <section class="menu" id="menu">
         <div class="menu__container">
           <h1 class="menu__title">Our menu of the week</h1>
           <div class="card__container">
@@ -133,7 +133,7 @@
         </div>
       </section>
 
-      <section class="map">
+      <section class="map" id="storefinder">
         <div class="map__container">
           <iframe
             class="map__frame"
@@ -157,6 +157,12 @@
 
       <footer>
         <p>Copyright Anne Heinrich</p>
+        <h2>Follow us on:</h2>
+        <div class="social-media">
+          <i class="fab fa-instagram"></i>
+          <i class="fab fa-facebook"></i>
+          <i class="fab fa-twitter"></i>
+        </div>
       </footer>
     </main>
 
